	Allegretta's copyrights have now been assigned to the Free
	Software Foundation.
	* doc/man/nanorc.5, doc/man/fr/nanorc.5: Make copyright notices
	for these files consistent in style.
	* files.c (cwd_tab_completion): Remove unneeded assert.
	* files.c (username_tab_completion, cwd_tab_completion): Rename
	variable buflen to buf_len, for consistency.

2007-10-05  David Lawrence Ramsey  <pooka109@gmail.com>

	* src/*.c, src/*.h: Update copyright notices, as my copyrights
	have now been assigned to the Free Software Foundation.

2007-09-16  David Lawrence Ramsey  <pooka109@gmail.com>

	* winio.c (edit_scroll): Fix problem where the screen wouldn't
	be updated properly if you paged up with the first line of the
	file onscreen and the mark on.

2007-08-26  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/faq.html: Update links to the Free Translation Project.

2007-08-23  Jean-Philippe Guérard <jean-philippe.guerard@tigreraye.org>

	* doc/man/fr/*.1, doc/man/fr/nanorc.5: Add translation of new
	licensing terms.

2007-08-23  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/man/fr/*.1, doc/man/fr/nanorc.5: Delete translation of
	old licensing terms, until it can be updated.

2007-08-22  David Lawrence Ramsey  <pooka109@gmail.com>

	* COPYING.DOC: Add a copy of the GNU FDL version 1.2.
	* Makefile.am: Add COPYING.DOC to EXTRA_DIST.
	* doc/man/*.1, doc/man/nanorc.5, doc/man/fr/*.1,
	doc/man/fr/nanorc.5, doc/texinfo/nano.texi: Relicense to the GNU
	GPL version 3 or later/the GNU FDL version 1.2 or later with no
	Invariant Sections, Front-Cover Texts, or Back-Cover Texts.

2007-08-21  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/man/rnano.1, doc/man/fr/rnano.1: Add missing copyright
	notice from nano-tiny.1, which rnano.1 is based on.
	* doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	Make all copyright notices consistent.

2007-08-16  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (do_insertfile): Properly handle more cases of