@@ -9,6 +9,11 @@
 	* files.c (cwd_tab_completion): Remove unneeded assert.
 	* files.c (username_tab_completion, cwd_tab_completion): Rename
 	variable buflen to buf_len, for consistency.
+	* files.c (input_tab): Disable completion of usernames,
+	directories, and filenames if the cursor isn't at the end of the
+	line, as it can lead to odd behavior (e.g. adding a copy of the
+	entire match to the middle of the line instead of just the
+	uncompleted part of the match).
 
 2007-10-05  David Lawrence Ramsey  <pooka109@gmail.com>
 
